<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividad.RegisterActivity"
    android:background="@color/colorBackgroundLayoutLogin">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            ​

            <ImageView
                android:id="@+id/logoApp"
                android:layout_width="276dp"
                android:layout_height="146dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/logo_des"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/iconeditado" />
            ​

            <EditText
                android:id="@+id/register_firstName"
                android:layout_width="217dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/colorBackgroundTxtLogin"
                android:ems="10"
                android:hint="@string/register_firstName_txt"
                android:inputType="textPersonName"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoApp" />
            ​

            <EditText
                android:id="@+id/register_lastName"
                android:layout_width="217dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/colorBackgroundTxtLogin"
                android:ems="10"
                android:hint="@string/register_lastName_txt"
                android:inputType="textPersonName"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_firstName" />
            ​
            ​

            <EditText
                android:id="@+id/register_email"
                android:layout_width="217dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/colorBackgroundTxtLogin"
                android:ems="10"
                android:hint="@string/register_email_txt"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_lastName" />
            ​

            <EditText
                android:id="@+id/register_ph"
                android:layout_width="217dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/colorBackgroundTxtLogin"
                android:ems="10"
                android:hint="@string/register_ph_num"
                android:inputType="phone"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_email" />

            <EditText
                android:id="@+id/register_alias"
                android:layout_width="217dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/colorBackgroundTxtLogin"
                android:ems="10"
                android:hint="@string/register_alias_txt"
                android:inputType="textPersonName"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_ph" />

            <EditText
                android:id="@+id/register_pwd"
                android:layout_width="217dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/colorBackgroundTxtLogin"
                android:ems="10"
                android:hint="@string/login_pwd_txt"
                android:inputType="textPassword"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                android:maxLength="20"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_alias" />
            ​

            <EditText
                android:id="@+id/register_confirm_pwd"
                android:layout_width="217dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:maxLength="20"
                android:layout_marginRight="8dp"
                android:background="@color/colorBackgroundTxtLogin"
                android:ems="10"
                android:hint="@string/register_pwd_confirm_txt"
                android:inputType="textPassword"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_pwd" />
            ​

            <Button
                android:id="@+id/register_btn"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="40dp"
                android:background="@color/colorBackgroundBtnLogin"
                android:text="@string/register_btn_txt"
                android:textColor="@color/colorTxtBtnLogin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_confirm_pwd" />
            ​
            ​
        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>